--- a/index.html
+++ b/index.html
@@ -1,52 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Telegram Form</title>
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   <style>
-      :root {
-          --safe-area-bottom: env(safe-area-inset-bottom);
-          --keyboard-height: calc(var(--tg-viewport-height) - var(--tg-viewport-stable-height));
-      }
-
       body {
           margin: 0;
           padding: 0;
           font-family: 'Roboto', sans-serif;
           background-color: #f5f5f5;
-          display: flex;
-          flex-direction: column;
-          align-items: stretch;
           min-height: 100vh;
-          overflow: hidden;
-      }
-
-      .content-wrapper {
-          flex: 1;
           display: flex;
           flex-direction: column;
-          padding: 24px;
-          box-sizing: border-box;
       }
 
-      .container {
+      .content {
           flex: 1;
           overflow-y: auto;
           -webkit-overflow-scrolling: touch;
-          padding-bottom: calc(var(--keyboard-height) + 60px); /* Место под панель */
+          padding: 24px;
           max-width: 600px;
           margin: 0 auto;
+      }
+
+      .form-container {
           background-color: white;
           border-radius: 16px;
           box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+          padding: 24px;
       }
 
-      .input-section {
-          padding: 24px 16px;
+      .input-group {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
           gap: 16px;
-          display: flex;
-          flex-direction: column;
+          padding: 16px 0;
       }
 
       .material-input {
@@ -56,7 +45,6 @@
           font-size: 16px;
           transition: all 0.2s ease;
           box-sizing: border-box;
-          min-height: 56px;
       }
 
       .material-input:focus {
@@ -65,28 +53,30 @@
           box-shadow: 0 0 0 2px rgba(33,150,243,0.2);
       }
 
-      .keyboard-control {
+      /* Клавиатура управления */
+      .keyboard-toolbar {
           position: fixed;
-          bottom: var(--safe-area-bottom);
+          bottom: 0;
           left: 0;
           right: 0;
-          padding: 8px;
+          padding: 12px;
           background: white;
           border-top: 1px solid #e0e0e0;
           display: flex;
           justify-content: space-between;
           align-items: center;
+          box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
           z-index: 1000;
-          box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
       }
 
-      .keyboard-control button {
+      .keyboard-toolbar button {
           padding: 8px 16px;
           background: #2196F3;
           color: white;
           border: none;
           border-radius: 8px;
           font-size: 16px;
+          cursor: pointer;
       }
 
       @media (max-width: 600px) {
@@ -97,82 +87,81 @@
   </style>
 </head>
 <body>
-<div class="content-wrapper">
-  <div class="container">
-    <div class="input-section">
+<div class="content">
+  <div class="form-container">
+    <!-- 20 инпутов -->
+    <div class="input-group">
+      <input class="material-input" placeholder="Field 1" type="text">
       <input class="material-input" placeholder="Field 2" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <!-- ... остальные 19 инпутов -->
+      <input class="material-input" placeholder="Field 3" type="text">
+      <input class="material-input" placeholder="Field 4" type="text">
+    </div>
+
+    <div class="input-group">
+      <input class="material-input" placeholder="Field 5" type="text">
+      <input class="material-input" placeholder="Field 6" type="text">
+      <input class="material-input" placeholder="Field 7" type="text">
+      <input class="material-input" placeholder="Field 8" type="text">
+    </div>
+
+    <div class="input-group">
+      <input class="material-input" placeholder="Field 9" type="text">
+      <input class="material-input" placeholder="Field 10" type="text">
+      <input class="material-input" placeholder="Field 11" type="text">
+      <input class="material-input" placeholder="Field 12" type="text">
+    </div>
+
+    <div class="input-group">
+      <input class="material-input" placeholder="Field 13" type="text">
+      <input class="material-input" placeholder="Field 14" type="text">
+      <input class="material-input" placeholder="Field 15" type="text">
+      <input class="material-input" placeholder="Field 16" type="text">
+    </div>
+
+    <div class="input-group">
+      <input class="material-input" placeholder="Field 17" type="text">
+      <input class="material-input" placeholder="Field 18" type="text">
+      <input class="material-input" placeholder="Field 19" type="text">
+      <input class="material-input" placeholder="Field 20" type="text">
     </div>
   </div>
 </div>
 
-<div class="keyboard-control" style="display: none;">
-  <button onclick="previousInput()">←</button>
-  <button onclick="nextInput()">→</button>
-  <button onclick="hideKeyboard()">Скрыть</button>
+<!-- Панель управления клавиатурой -->
+<div class="keyboard-toolbar" style="display: none;">
+  <button onclick="closeKeyboard()">Скрыть клавиатуру</button>
+  <button onclick="submitForm()">Отправить</button>
 </div>
 
 <script>
   telegram.WebApp.ready();
+  telegram.WebApp.expand();
 
   const inputs = Array.from(document.querySelectorAll('.material-input'));
-  let currentScrollTop = 0;
+  let lastFocusedInput = null;
 
-  // Динамическое обновление высоты
+  // Обновление высоты окна при изменениях
   function updateLayout() {
-    const container = document.querySelector('.container');
+    const contentHeight = document.querySelector('.content').scrollHeight;
     const keyboardHeight = telegram.WebApp.currentKeyboardHeight || 0;
 
-    // Обновляем padding-bottom для контейнера
-    container.style.paddingBottom = `${keyboardHeight + 60}px`;
-
-    // Перерасчет высоты окна
+    // Учет высоты панели управления (60px)
     telegram.WebApp.expand({
-      height: document.body.scrollHeight + 60 // Доп. маржин
+      height: contentHeight + keyboardHeight + 60
     });
   }
-
-  // Обработчики событий Telegram
-  telegram.WebApp.onEvent('keyboard', (e) => {
-    updateLayout();
-  });
 
   // Фокус-логика
   inputs.forEach(input => {
     input.addEventListener('focus', () => {
-      document.querySelector('.keyboard-control').style.display = 'flex';
+      lastFocusedInput = input;
+      document.querySelector('.keyboard-toolbar').style.display = 'flex';
 
-      // Сохраняем текущий скролл
-      currentScrollTop = window.scrollY;
-
-      // Рассчитываем позицию
+      // Автопозиционирование
       const rect = input.getBoundingClientRect();
-      const targetY = window.scrollY + rect.top - (window.innerHeight - rect.bottom - 50);
+      const viewportHeight = window.innerHeight - 60; // Вычет панели
+      const targetY = window.scrollY + rect.top - (viewportHeight - rect.height - 20);
 
-      // Плавный скролл
       window.scrollTo({
         top: Math.max(0, targetY),
         behavior: 'smooth'
@@ -183,32 +172,29 @@
 
     input.addEventListener('blur', () => {
       setTimeout(() => {
-        document.querySelector('.keyboard-control').style.display = 'none';
-        window.scrollTo({ top: currentScrollTop });
-      }, 300);
+        document.querySelector('.keyboard-toolbar').style.display = 'none';
+      }, 200);
     });
   });
 
-  // Контрольные функции
-  function previousInput() {
-    const index = inputs.indexOf(document.activeElement);
-    inputs[Math.max(index - 1, 0)]?.focus();
-  }
-
-  function nextInput() {
-    const index = inputs.indexOf(document.activeElement);
-    inputs[Math.min(index + 1, inputs.length - 1)]?.focus();
-  }
-
-  function hideKeyboard() {
+  // Функции управления
+  function closeKeyboard() {
     telegram.WebApp.hideKeyboard({ placeholder: "Нажмите для ввода" });
-    document.activeElement.blur();
+    lastFocusedInput.blur();
   }
+
+  function submitForm() {
+    // Логика отправки данных
+    alert('Форма отправлена!');
+  }
+
+  // Обработчики событий
+  window.addEventListener('resize', updateLayout);
+  telegram.WebApp.onEvent('keyboard', updateLayout);
 
   // Инициализация
-  telegram.WebApp.MainButton.color = '#2196F3';
   updateLayout();
-  window.addEventListener('resize', updateLayout);
+  telegram.WebApp.MainButton.color = '#2196F3';
 </script>
 </body>
 </html>
