--- a/index.html
+++ b/index.html
@@ -1,200 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Telegram Form</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <title>Telegram Web App</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <style>
       body {
           margin: 0;
           padding: 0;
-          font-family: 'Roboto', sans-serif;
-          background-color: #f5f5f5;
           min-height: 100vh;
           display: flex;
           flex-direction: column;
+          background: #f5f5f5;
+          transition: padding-bottom 0.3s;
       }
 
-      .content {
+      .tg-content {
           flex: 1;
           overflow-y: auto;
-          -webkit-overflow-scrolling: touch;
           padding: 24px;
-          max-width: 600px;
-          margin: 0 auto;
+          padding-bottom: calc(env(safe-area-inset-bottom) + 24px);
+          transition: padding-bottom 0.3s;
       }
 
       .form-container {
-          background-color: white;
-          border-radius: 16px;
-          box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+          gap: 24px;
           padding: 24px;
       }
 
-      .input-group {
-          display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-          gap: 16px;
-          padding: 16px 0;
-      }
-
-      .material-input {
-          padding: 16px;
-          border: 1px solid #e0e0e0;
-          border-radius: 8px;
-          font-size: 16px;
-          transition: all 0.2s ease;
-          box-sizing: border-box;
-      }
-
-      .material-input:focus {
-          outline: none;
-          border-color: #2196F3;
-          box-shadow: 0 0 0 2px rgba(33,150,243,0.2);
-      }
-
-      /* Клавиатура управления */
-      .keyboard-toolbar {
-          position: fixed;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          padding: 12px;
-          background: white;
-          border-top: 1px solid #e0e0e0;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
-          z-index: 1000;
-      }
-
-      .keyboard-toolbar button {
-          padding: 8px 16px;
-          background: #2196F3;
-          color: white;
-          border: none;
-          border-radius: 8px;
-          font-size: 16px;
-          cursor: pointer;
+      .mdc-text-field {
+          width: 100%;
       }
 
       @media (max-width: 600px) {
-          .material-input {
-              font-size: 18px;
+          .form-container {
+              grid-template-columns: 1fr;
           }
+      }
+
+      /* Кастомные стили для коррекции позиции */
+      .input-wrapper {
+          position: relative;
+          z-index: 1;
+      }
+
+      .keyboard-adjust {
+          transition: all 0.3s ease;
+      }
+
+      /* Клавиатура стили */
+      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+          color: #757575;
+      }
+      ::-moz-placeholder { /* Firefox 19+ */
+          color: #757575;
+      }
+      :-ms-input-placeholder { /* IE 10+ */
+          color: #757575;
+      }
+      :-moz-placeholder { /* Firefox 18- */
+          color: #757575;
       }
   </style>
 </head>
 <body>
-<div class="content">
-  <div class="form-container">
-    <!-- 20 инпутов -->
-    <div class="input-group">
-      <input class="material-input" placeholder="Field 1" type="text">
-      <input class="material-input" placeholder="Field 2" type="text">
-      <input class="material-input" placeholder="Field 3" type="text">
-      <input class="material-input" placeholder="Field 4" type="text">
-    </div>
-
-    <div class="input-group">
-      <input class="material-input" placeholder="Field 5" type="text">
-      <input class="material-input" placeholder="Field 6" type="text">
-      <input class="material-input" placeholder="Field 7" type="text">
-      <input class="material-input" placeholder="Field 8" type="text">
-    </div>
-
-    <div class="input-group">
-      <input class="material-input" placeholder="Field 9" type="text">
-      <input class="material-input" placeholder="Field 10" type="text">
-      <input class="material-input" placeholder="Field 11" type="text">
-      <input class="material-input" placeholder="Field 12" type="text">
-    </div>
-
-    <div class="input-group">
-      <input class="material-input" placeholder="Field 13" type="text">
-      <input class="material-input" placeholder="Field 14" type="text">
-      <input class="material-input" placeholder="Field 15" type="text">
-      <input class="material-input" placeholder="Field 16" type="text">
-    </div>
-
-    <div class="input-group">
-      <input class="material-input" placeholder="Field 17" type="text">
-      <input class="material-input" placeholder="Field 18" type="text">
-      <input class="material-input" placeholder="Field 19" type="text">
-      <input class="material-input" placeholder="Field 20" type="text">
-    </div>
-  </div>
-</div>
-
-<!-- Панель управления клавиатурой -->
-<div class="keyboard-toolbar" style="display: none;">
-  <button onclick="closeKeyboard()">Скрыть клавиатуру</button>
-  <button onclick="submitForm()">Отправить</button>
+<div class="tg-content">
+  <div class="form-container" id="formContainer"></div>
 </div>
 
 <script>
-  telegram.WebApp.ready();
-  telegram.WebApp.expand();
+  // Инициализация Telegram Web App
+  const tg = Telegram.WebApp;
+  tg.ready();
 
-  const inputs = Array.from(document.querySelectorAll('.material-input'));
-  let lastFocusedInput = null;
+  // Создаем 20 инпутов
+  const formContainer = document.getElementById('formContainer');
 
-  // Обновление высоты окна при изменениях
-  function updateLayout() {
-    const contentHeight = document.querySelector('.content').scrollHeight;
-    const keyboardHeight = telegram.WebApp.currentKeyboardHeight || 0;
+  for (let i = 1; i <= 20; i++) {
+    const field = document.createElement('div');
+    field.className = 'mdc-text-field mdc-text-field--filled input-wrapper';
 
-    // Учет высоты панели управления (60px)
-    telegram.WebApp.expand({
-      height: contentHeight + keyboardHeight + 60
-    });
+    const input = document.createElement('input');
+    input.className = 'mdc-text-field__input';
+    input.type = 'text';
+    input.id = `text-field-${i}`;
+    input.placeholder = `Поле ${i}`;
+
+    const label = document.createElement('label');
+    label.className = 'mdc-floating-label';
+    label.htmlFor = `text-field-${i}`;
+    label.textContent = `Поле ${i}`;
+
+    const bottomLine = document.createElement('div');
+    bottomLine.className = 'mdc-text-field__ripple';
+
+    field.appendChild(label);
+    field.appendChild(input);
+    field.appendChild(bottomLine);
+
+    formContainer.appendChild(field);
   }
 
-  // Фокус-логика
-  inputs.forEach(input => {
+  // Инициализация Material Components
+  mdc.textField.MDCTextField.attachTo(document.querySelector('.mdc-text-field'));
+
+  // Фикс для клавиатуры на мобильных
+  document.querySelectorAll('input').forEach(input => {
     input.addEventListener('focus', () => {
-      lastFocusedInput = input;
-      document.querySelector('.keyboard-toolbar').style.display = 'flex';
-
-      // Автопозиционирование
-      const rect = input.getBoundingClientRect();
-      const viewportHeight = window.innerHeight - 60; // Вычет панели
-      const targetY = window.scrollY + rect.top - (viewportHeight - rect.height - 20);
-
-      window.scrollTo({
-        top: Math.max(0, targetY),
-        behavior: 'smooth'
-      });
-
-      updateLayout();
-    });
-
-    input.addEventListener('blur', () => {
       setTimeout(() => {
-        document.querySelector('.keyboard-toolbar').style.display = 'none';
-      }, 200);
+        const rect = input.getBoundingClientRect();
+        const windowHeight = window.innerHeight;
+        const bottom = rect.bottom;
+        if (bottom > windowHeight) {
+          window.scrollTo({
+            top: window.scrollY + rect.top - (windowHeight / 2) + (rect.height / 2),
+            behavior: 'smooth'
+          });
+        }
+      }, 100);
     });
   });
 
-  // Функции управления
-  function closeKeyboard() {
-    telegram.WebApp.hideKeyboard({ placeholder: "Нажмите для ввода" });
-    lastFocusedInput.blur();
-  }
-
-  function submitForm() {
-    // Логика отправки данных
-    alert('Форма отправлена!');
-  }
-
-  // Обработчики событий
-  window.addEventListener('resize', updateLayout);
-  telegram.WebApp.onEvent('keyboard', updateLayout);
-
-  // Инициализация
-  updateLayout();
-  telegram.WebApp.MainButton.color = '#2196F3';
+  // Автоподстройка padding при появлении клавиатуры
+  window.addEventListener('resize', () => {
+    const { innerHeight } = window;
+    const content = document.querySelector('.tg-content');
+    content.style.paddingBottom = `${innerHeight - document.documentElement.clientHeight}px`;
+  });
 </script>
 </body>
 </html>
