--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Telegram Web App</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <style>
+      :root {
+          --tg-viewport-stable-height: env(tg-viewport-stable-height);
+          --tg-safe-area-bottom: env(tg-content-safe-area-inset);
+      }
+
       body {
           margin: 0;
           padding: 0;
@@ -16,13 +22,14 @@
           flex-direction: column;
           background: #f5f5f5;
           transition: padding-bottom 0.3s;
+          font-family: Roboto, sans-serif;
       }
 
       .tg-content {
           flex: 1;
           overflow-y: auto;
           padding: 24px;
-          padding-bottom: calc(env(safe-area-inset-bottom) + 24px);
+          padding-bottom: calc(var(--tg-safe-area-bottom) + 24px);
           transition: padding-bottom 0.3s;
       }
 
@@ -37,34 +44,35 @@
           width: 100%;
       }
 
+      .mdc-floating-label {
+          color: #757575;
+      }
+
+      .mdc-text-field__ripple {
+          background-color: #e0e0e0;
+      }
+
+      /* Фикс позиционирования при скролле */
+      .input-wrapper {
+          position: relative;
+          z-index: 1;
+      }
+
       @media (max-width: 600px) {
           .form-container {
               grid-template-columns: 1fr;
           }
       }
 
-      /* Кастомные стили для коррекции позиции */
-      .input-wrapper {
-          position: relative;
-          z-index: 1;
+      /* Кастомные стили для плейсхолдера */
+      ::placeholder {
+          color: #9e9e9e;
+          opacity: 1; /* Для Safari */
       }
 
-      .keyboard-adjust {
-          transition: all 0.3s ease;
-      }
-
-      /* Клавиатура стили */
-      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-          color: #757575;
-      }
-      ::-moz-placeholder { /* Firefox 19+ */
-          color: #757575;
-      }
-      :-ms-input-placeholder { /* IE 10+ */
-          color: #757575;
-      }
-      :-moz-placeholder { /* Firefox 18- */
-          color: #757575;
+      /* Важные стили для корректного отображения полей */
+      .mdc-text-field__input {
+          color: #212121;
       }
   </style>
 </head>
@@ -82,40 +90,46 @@
   const formContainer = document.getElementById('formContainer');
 
   for (let i = 1; i <= 20; i++) {
+    // Создаем контейнер для поля ввода
     const field = document.createElement('div');
     field.className = 'mdc-text-field mdc-text-field--filled input-wrapper';
 
-    const input = document.createElement('input');
-    input.className = 'mdc-text-field__input';
-    input.type = 'text';
-    input.id = `text-field-${i}`;
-    input.placeholder = `Поле ${i}`;
-
+    // Создаем label
     const label = document.createElement('label');
     label.className = 'mdc-floating-label';
     label.htmlFor = `text-field-${i}`;
     label.textContent = `Поле ${i}`;
 
+    // Создаем сам input
+    const input = document.createElement('input');
+    input.className = 'mdc-text-field__input';
+    input.type = 'text';
+    input.id = `text-field-${i}`;
+    input.placeholder = `Поле ${i}`; // Русский плейсхолдер
+
+    // Добавляем ripple-эффект
     const bottomLine = document.createElement('div');
     bottomLine.className = 'mdc-text-field__ripple';
 
+    // Собираем элементы
     field.appendChild(label);
     field.appendChild(input);
     field.appendChild(bottomLine);
 
+    // Добавляем в DOM и инициализируем
     formContainer.appendChild(field);
+    new mdc.textField.MDCTextField(field); // Инициализация здесь
   }
 
-  // Инициализация Material Components
-  mdc.textField.MDCTextField.attachTo(document.querySelector('.mdc-text-field'));
-
-  // Фикс для клавиатуры на мобильных
+  // Фикс позиционирования при фокусе
   document.querySelectorAll('input').forEach(input => {
     input.addEventListener('focus', () => {
       setTimeout(() => {
         const rect = input.getBoundingClientRect();
-        const windowHeight = window.innerHeight;
+        const viewportHeight = getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height');
+        const windowHeight = parseFloat(viewportHeight) || window.innerHeight;
         const bottom = rect.bottom;
+
         if (bottom > windowHeight) {
           window.scrollTo({
             top: window.scrollY + rect.top - (windowHeight / 2) + (rect.height / 2),
@@ -128,9 +142,9 @@
 
   // Автоподстройка padding при появлении клавиатуры
   window.addEventListener('resize', () => {
-    const { innerHeight } = window;
     const content = document.querySelector('.tg-content');
-    content.style.paddingBottom = `${innerHeight - document.documentElement.clientHeight}px`;
+    const safeAreaBottom = getComputedStyle(document.documentElement).getPropertyValue('--tg-safe-area-bottom');
+    content.style.paddingBottom = `${parseFloat(safeAreaBottom) + 24}px`;
   });
 </script>
 </body>
