--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       :root {
           --tg-viewport-stable-height: env(tg-viewport-stable-height);
           --tg-safe-area-bottom: env(tg-content-safe-area-inset);
-          --mdc-theme-surface: #ffffff; /* Фон инпута */
+          --keyboard-height: 0;
       }
 
       body {
@@ -30,7 +30,7 @@
           flex: 1;
           overflow-y: auto;
           padding: 24px;
-          padding-bottom: calc(var(--tg-safe-area-bottom) + 24px);
+          padding-bottom: calc(var(--tg-safe-area-bottom) + var(--keyboard-height) + 24px);
           transition: padding-bottom 0.3s;
       }
 
@@ -45,34 +45,23 @@
           width: 100%;
       }
 
-      /* Исправление цветов */
       .mdc-floating-label {
-          color: #212121; /* Цвет метки */
+          color: #212121;
       }
 
       .mdc-text-field__input {
-          color: #212121; /* Цвет введенного текста */
+          color: #212121;
       }
 
       ::placeholder {
-          color: #616161 !important; /* Цвет плейсхолдера */
+          color: #616161 !important;
           opacity: 1;
       }
 
-      .mdc-text-field--filled .mdc-floating-label {
-          color: #616161; /* Цвет метки при фокусе */
-      }
-
-      /* Стили для фокуса */
       .mdc-text-field--focused .mdc-floating-label {
-          color: #007bff !important; /* Цвет метки при фокусе */
+          color: #007bff !important;
       }
 
-      .mdc-text-field--focused .mdc-text-field__ripple {
-          background-color: rgba(0, 123, 255, 0.2);
-      }
-
-      /* Фикс позиционирования */
       .input-wrapper {
           position: relative;
           z-index: 1;
@@ -95,7 +84,10 @@
   tg.ready();
 
   const formContainer = document.getElementById('formContainer');
+  let lastScrollPosition = 0;
+  let keyboardHeight = 0;
 
+  // Создаем 20 инпутов
   for (let i = 1; i <= 20; i++) {
     const field = document.createElement('div');
     field.className = 'mdc-text-field mdc-text-field--filled input-wrapper';
@@ -122,44 +114,51 @@
     new mdc.textField.MDCTextField(field);
   }
 
-  // Фикс перекрытия клавиатуры
-  let lastScrollPosition = 0;
+  // Функция для расчета высоты клавиатуры
+  const calculateKeyboardHeight = () => {
+    const stableHeight = parseFloat(getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height'));
+    const currentHeight = window.innerHeight;
+    return stableHeight - currentHeight;
+  };
 
+  // Обработчики событий
   document.querySelectorAll('input').forEach(input => {
     input.addEventListener('focus', () => {
       lastScrollPosition = window.scrollY;
-      window.scrollTo(0, 0); // Сбрасываем скролл перед фокусом
+      const kbHeight = calculateKeyboardHeight();
+      document.documentElement.style.setProperty('--keyboard-height', `${kbHeight}px`);
+
+      setTimeout(() => {
+        const rect = input.getBoundingClientRect();
+        const viewportHeight = parseFloat(getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height'));
+        const bottom = rect.bottom;
+
+        if (bottom > viewportHeight) {
+          window.scrollTo({
+            top: window.scrollY + rect.top - (viewportHeight / 2) + (rect.height / 2),
+            behavior: 'smooth'
+          });
+        }
+      }, 100);
     });
 
     input.addEventListener('blur', () => {
       setTimeout(() => {
-        window.scrollTo(0, lastScrollPosition); // Возвращаем скролл
-      }, 200);
-    });
+        const kbHeight = calculateKeyboardHeight();
+        if (kbHeight > 0) return; // Клавиатура все еще открыта
 
-    input.addEventListener('focus', () => {
-      const rect = input.getBoundingClientRect();
-      const viewportHeight = getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height');
-      const windowHeight = parseFloat(viewportHeight) || window.innerHeight;
-      const bottom = rect.bottom;
-
-      if (bottom > windowHeight) {
-        window.scrollTo({
-          top: window.scrollY + rect.top - (windowHeight / 2) + (rect.height / 2),
-          behavior: 'smooth'
-        });
-      }
+        document.documentElement.style.setProperty('--keyboard-height', '0');
+        window.scrollTo(0, lastScrollPosition);
+      }, 300);
     });
   });
 
-  // Улучшенный обработчик resize
+  // Обработчик изменения размера окна
   window.addEventListener('resize', () => {
-    const content = document.querySelector('.tg-content');
-    const safeAreaBottom = getComputedStyle(document.documentElement).getPropertyValue('--tg-safe-area-bottom');
-    content.style.paddingBottom = `${parseFloat(safeArea-bottom) + 24}px`;
+    const kbHeight = calculateKeyboardHeight();
+    document.documentElement.style.setProperty('--keyboard-height', `${kbHeight}px`);
 
-    // Коррекция скролла после закрытия клавиатуры
-    if (document.activeElement.tagName !== 'INPUT') {
+    if (kbHeight === 0 && document.activeElement.tagName !== 'INPUT') {
       window.scrollTo(0, lastScrollPosition);
     }
   });
