--- a/index.html
+++ b/index.html
@@ -1,166 +1,136 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Telegram Web App</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-  <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-  <style>
-      :root {
-          --tg-viewport-stable-height: env(tg-viewport-stable-height);
-          --tg-safe-area-bottom: env(tg-content-safe-area-inset);
-          --keyboard-height: 0;
-      }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Telegram Form</title>
 
+  <!-- Подключение Material Components CSS -->
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <!-- Telegram Web App стили -->
+  <style>
       body {
           margin: 0;
-          padding: 0;
-          min-height: 100vh;
+          font-family: Roboto, Arial, sans-serif;
+          overflow: hidden;
+          height: 100%;
           display: flex;
           flex-direction: column;
-          background: #f5f5f5;
-          transition: padding-bottom 0.3s;
-          font-family: Roboto, sans-serif;
       }
 
-      .tg-content {
+      .mdc-layout-grid {
+          padding: 24px;
           flex: 1;
           overflow-y: auto;
-          padding: 24px;
-          padding-bottom: calc(var(--tg-safe-area-bottom) + var(--keyboard-height) + 24px);
-          transition: padding-bottom 0.3s;
+          transition: transform 0.3s ease-out;
       }
 
-      .form-container {
-          display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-          gap: 24px;
-          padding: 24px;
+      .keyboard-open {
+          transform: translateY(-25%);
       }
 
-      .mdc-text-field {
-          width: 100%;
-      }
-
-      .mdc-floating-label {
-          color: #212121;
-      }
-
-      .mdc-text-field__input {
-          color: #212121;
-      }
-
-      ::placeholder {
-          color: #616161 !important;
-          opacity: 1;
-      }
-
-      .mdc-text-field--focused .mdc-floating-label {
-          color: #007bff !important;
-      }
-
-      .input-wrapper {
-          position: relative;
-          z-index: 1;
-      }
-
-      @media (max-width: 600px) {
-          .form-container {
-              grid-template-columns: 1fr;
-          }
+      .mdc-button--primary {
+          margin-top: 24px;
       }
   </style>
 </head>
 <body>
-<div class="tg-content">
-  <div class="form-container" id="formContainer"></div>
+<div class="mdc-layout-grid" id="contentContainer">
+  <!-- Заголовок -->
+  <div class="mdc-layout-grid__inner">
+    <h2 class="mdc-typography--headline6">Форма</h2>
+  </div>
+
+  <!-- Форма с 20 инпутами -->
+  <form id="myForm">
+    <div class="mdc-layout-grid__inner">
+      <!-- Генерация 20 инпутов -->
+      <template id="inputTemplate">
+        <div class="mdc-layout-grid__cell--span-12">
+          <div class="mdc-text-field mdc-text-field--outlined">
+            <input class="mdc-text-field__input" type="text" id="field{{id}}">
+            <div class="mdc-notched-outline">
+              <div class="mdc-notched-outline__leading"></div>
+              <div class="mdc-notched-outline__notch">
+                <label class="mdc-floating-label">Поле {{id}}</label>
+              </div>
+              <div class="mdc-notched-outline__trailing"></div>
+            </div>
+          </div>
+        </div>
+      </template>
+    </div>
+  </form>
+
+  <!-- Кнопка отправки -->
+  <div class="mdc-layout-grid__inner" style="margin-top: auto">
+    <button class="mdc-button mdc-button--primary" id="submitButton">Отправить</button>
+  </div>
 </div>
 
+<!-- Подключение JS зависимостей -->
+<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 <script>
-  const tg = Telegram.WebApp;
-  tg.ready();
-
-  const formContainer = document.getElementById('formContainer');
-  let lastScrollPosition = 0;
-  let keyboardHeight = 0;
-
-  // Создаем 20 инпутов
-  for (let i = 1; i <= 20; i++) {
-    const field = document.createElement('div');
-    field.className = 'mdc-text-field mdc-text-field--filled input-wrapper';
-
-    const label = document.createElement('label');
-    label.className = 'mdc-floating-label';
-    label.htmlFor = `text-field-${i}`;
-    label.textContent = `Поле ${i}`;
-
-    const input = document.createElement('input');
-    input.className = 'mdc-text-field__input';
-    input.type = 'text';
-    input.id = `text-field-${i}`;
-    input.placeholder = `Поле ${i}`;
-
-    const ripple = document.createElement('div');
-    ripple.className = 'mdc-text-field__ripple';
-
-    field.appendChild(label);
-    field.appendChild(input);
-    field.appendChild(ripple);
-
-    formContainer.appendChild(field);
-    new mdc.textField.MDCTextField(field);
-  }
-
-  // Функция для расчета высоты клавиатуры
-  const calculateKeyboardHeight = () => {
-    const stableHeight = parseFloat(getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height'));
-    const currentHeight = window.innerHeight;
-    return stableHeight - currentHeight;
-  };
-
-  // Обработчики событий
-  document.querySelectorAll('input').forEach(input => {
-    input.addEventListener('focus', () => {
-      lastScrollPosition = window.scrollY;
-      const kbHeight = calculateKeyboardHeight();
-      document.documentElement.style.setProperty('--keyboard-height', `${kbHeight}px`);
-
-      setTimeout(() => {
-        const rect = input.getBoundingClientRect();
-        const viewportHeight = parseFloat(getComputedStyle(document.body).getPropertyValue('--tg-viewport-stable-height'));
-        const bottom = rect.bottom;
-
-        if (bottom > viewportHeight) {
-          window.scrollTo({
-            top: window.scrollY + rect.top - (viewportHeight / 2) + (rect.height / 2),
-            behavior: 'smooth'
-          });
-        }
-      }, 100);
-    });
-
-    input.addEventListener('blur', () => {
-      setTimeout(() => {
-        const kbHeight = calculateKeyboardHeight();
-        if (kbHeight > 0) return; // Клавиатура все еще открыта
-
-        document.documentElement.style.setProperty('--keyboard-height', '0');
-        window.scrollTo(0, lastScrollPosition);
-      }, 300);
+  // Инициализация Material Components
+  document.addEventListener('DOMContentLoaded', () => {
+    const textFields = document.querySelectorAll('.mdc-text-field');
+    textFields.forEach(textField => {
+      mdc.textfield.MDCTextField.attachTo(textField);
     });
   });
 
-  // Обработчик изменения размера окна
-  window.addEventListener('resize', () => {
-    const kbHeight = calculateKeyboardHeight();
-    document.documentElement.style.setProperty('--keyboard-height', `${kbHeight}px`);
+  // Создание 20 инпутов
+  const form = document.getElementById('myForm');
+  const template = document.getElementById('inputTemplate');
 
-    if (kbHeight === 0 && document.activeElement.tagName !== 'INPUT') {
-      window.scrollTo(0, lastScrollPosition);
+  for (let i = 1; i <= 20; i++) {
+    const clone = document.importNode(template.content, true);
+    clone.querySelector('input').id = `field${i}`;
+    clone.querySelector('label').textContent = `Поле ${i}`;
+    form.appendChild(clone);
+  }
+
+  // Адаптация под клавиатуру
+  let lastKnownHeight = window.innerHeight;
+  let isKeyboardOpen = false;
+
+  document.querySelectorAll('input').forEach(input => {
+    input.addEventListener('focus', () => {
+      window.addEventListener('resize', onResize);
+      checkKeyboard();
+    });
+    input.addEventListener('blur', () => {
+      window.removeEventListener('resize', onResize);
+      checkKeyboard();
+    });
+  });
+
+  function checkKeyboard() {
+    const currentHeight = window.innerHeight;
+    if (currentHeight < lastKnownHeight && !isKeyboardOpen) {
+      document.getElementById('contentContainer').classList.add('keyboard-open');
+      isKeyboardOpen = true;
+    } else if (currentHeight === lastKnownHeight && isKeyboardOpen) {
+      document.getElementById('contentContainer').classList.remove('keyboard-open');
+      isKeyboardOpen = false;
     }
+    lastKnownHeight = currentHeight;
+  }
+
+  // Отправка данных
+  document.getElementById('submitButton').addEventListener('click', () => {
+    const data = {};
+    Array.from(document.querySelectorAll('input')).forEach(input => {
+      data[input.id] = input.value;
+    });
+    Telegram.WebApp.sendData(JSON.stringify(data));
+  });
+
+  // Закрытие приложения после отправки
+  Telegram.WebApp.MainButton.onClick(() => {
+    Telegram.WebApp.close();
   });
 </script>
 </body>
